# hlsocial

./: .gitignore  Makefile  README.md
doc/: hl-tests.odt
docker/: Dockerfile.build.psql  Dockerfile.build.rust  Dockerfile.debian12  Dockerfile.rust  Dockerfile.ubuntu2004  docker-compose.yml
files/debian_bookworm/: sources.list
files/ubuntu_focal/: sources.list
rust/hlsocial/: Cargo.toml
rust/hlsocial/migrations/: 0001_init.sql
rust/hlsocial/src/: api.rs  config.rs  error.rs  main.rs  services.rs
rust/hlsocial/src/api/: v1.rs
rust/hlsocial/src/api/v1/: login.rs  middleware.rs  token.rs  user.rs
wi/hlsocial/: package-lock.json  package.json  tsconfig.json
wi/hlsocial/src/: App.css  App.tsx  index.tsx
wi/hlsocial/src/api/: pages.ts  v1.ts
wi/hlsocial/src/pages/: Login.tsx  Logout.tsx  Notify.tsx  Profile.tsx  Register.tsx  Search.tsx  Users.tsx
