[package]
name = "hlsocial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
envconfig = "0.10.0"
rust-scrypt = "1.3.0"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres" ] }
tokio = "1.36.0"
